[package]
name = "p2p-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.31.0"
bytes = "1.5.0"
clap =  { version =  "4.4.11", features = ["derive"] }
futures = "0.3.29"
structopt = "0.3.26"
tokio = { version = "1.34.0", features = ["full"] }
